Bug: 0 Comment: Remove yellow hover over. It is unreadable on small screens

--- a/trunk/ssf/web/docroot/css/ss_mobile_iphone.css
+++ b/trunk/ssf/web/docroot/css/ss_mobile_iphone.css
@@ -27,9 +27,10 @@ body {
 	font-family:  Helvetica, sans-serif;
 	}
 a:hover {
-	color: #ff0000;
-	background-color: #ffff00;
+	color: #000000;
 	text-decoration: none;
+	outline: dotted 1px gray;
+	background-color: #e5e5e5;
 }
 
 /* Reduce margin and border sizes slightly
